@@ -2,7 +2,9 @@
   [New Features]
     * Add Net::SSLeay::DH#new method.
     * Add Net::SSLeay::EVP_PKEY#new method.
-    * Add Net::SSLeay::PEM#read_bio_PrivateKeymethod.
+    * Add Net::SSLeay::PEM#read_bio_PrivateKey method.
+    * Add Net::SSLeay::EVP#sha256 method.
+    * Add Net::SSLeay::EVP#sha512 method.
     
   [Incompatible Changes]
     * Add an exception to Net::SSLeay::OBJ#nid2obj method.
